--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
-This is taylor-shopping.co.uk!
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <script src="https://a123.taylor-shopping.co.uk/script.js"></script>
+  <meta charset="utf-8" />
+  <title>This is taylor-shopping.co.uk!</title>
+</head>
+
+<body>
+  <div class="mainContentWrapper">
+    <div class="contentSub">
+      This is taylor-shopping.co.uk!
+      Test with script "a123.taylor-shopping.co.uk"
+    </div>
+  </div>
+</body>
+
+</html>
