--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <script src="https://r777.taylor-shopping.co.uk/script.js"></script>
+  <script src="https://a085.taylor-shopping.co.uk/script.js"></script>
   <meta charset="utf-8" />
   <title>This is taylor-shopping.co.uk!</title>
 </head>
@@ -11,7 +11,7 @@
   <div class="mainContentWrapper">
     <div class="contentSub">
       This is taylor-shopping.co.uk!
-      Test with script "r777.taylor-shopping.co.uk"
+      Test with script "a085.taylor-shopping.co.uk"
     </div>
   </div>
 </body>
